--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.iaimi</groupId>
     <artifactId>OpenAI-SDK</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
     <name>OpenAI-SDK</name>
     <description>OpenAI-SDK</description>
     <properties>
@@ -49,6 +49,12 @@
             <groupId>com.aliyun</groupId>
             <artifactId>broadscope-bailian-sdk-java</artifactId>
             <version>1.2.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/dashscope-sdk-java -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>dashscope-sdk-java</artifactId>
+            <version>2.11.0</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
@@ -105,6 +111,9 @@
                     <additionalJOptions>
                         <additionalJOption>-Xdoclint:none</additionalJOption>
                     </additionalJOptions>
+                    <show>package</show>
+                    <!-- 禁用java 8 的DocLint新特性，以确保当javadoc有编译错误时，也能正常生成javadoc jar包-->
+                    <doclint>none</doclint>
                 </configuration>
                 <executions>
                     <execution>
@@ -128,6 +137,14 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
             </plugin>
 
         </plugins>
