--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>cn.iaimi</groupId>
     <artifactId>OpenAI-SDK</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.7</version>
     <name>OpenAI-SDK</name>
     <description>OpenAI-SDK</description>
     <properties>
@@ -56,6 +56,13 @@
             <artifactId>dashscope-sdk-java</artifactId>
             <version>2.12.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
